[gd_scene load_steps=10 format=3 uid="uid://du5exoe518pkf"]

[ext_resource type="Script" path="res://ui/arrow_selector.gd" id="1_gys82"]
[ext_resource type="Texture2D" uid="uid://cbuj3t4w7d3t1" path="res://assets/main_menu/left_arrow.png" id="1_licy3"]
[ext_resource type="Texture2D" uid="uid://lmhprfyvaasu" path="res://assets/main_menu/left_arrow_pressed.png" id="2_muvm8"]
[ext_resource type="Texture2D" uid="uid://ddge6ilq0uj47" path="res://assets/main_menu/left_arrow_hover.png" id="3_0hy87"]
[ext_resource type="Texture2D" uid="uid://dqudgnc4gcdgp" path="res://assets/main_menu/left_arrow_disabled.png" id="4_xwms2"]
[ext_resource type="Texture2D" uid="uid://tc1i1fljwoab" path="res://assets/main_menu/right_arrow.png" id="5_euf5k"]
[ext_resource type="Texture2D" uid="uid://fwwlr1iy18uj" path="res://assets/main_menu/right_arrow_pressed.png" id="6_o5w42"]
[ext_resource type="Texture2D" uid="uid://c2yjuj3ixt1ck" path="res://assets/main_menu/right_arrow_hover.png" id="7_n6s4l"]
[ext_resource type="Texture2D" uid="uid://ccxmvb66h74c5" path="res://assets/main_menu/right_arrow_disabled.png" id="8_c6wnv"]

[node name="ArrowSelector" type="HBoxContainer"]
size_flags_horizontal = 4
theme_override_constants/separation = 0
script = ExtResource("1_gys82")

[node name="LeftArrow" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_licy3")
texture_pressed = ExtResource("2_muvm8")
texture_hover = ExtResource("3_0hy87")
texture_disabled = ExtResource("4_xwms2")

[node name="TextContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Text" type="RichTextLabel" parent="TextContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.478431, 0.227451, 0.74902, 0.345098)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
bbcode_enabled = true
text = "[center][color=green]The Eleusinian[/color][/center]"
fit_content = true
scroll_active = false

[node name="RightArrow" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_euf5k")
texture_pressed = ExtResource("6_o5w42")
texture_hover = ExtResource("7_n6s4l")
texture_disabled = ExtResource("8_c6wnv")

[connection signal="pressed" from="LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="RightArrow" to="." method="_on_right_arrow_pressed"]
